--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,18 +18,13 @@ body {
 }
 
 body {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  -ms-overflow-style: auto;
+  scrollbar-width: auto;
   margin: 0;
   max-width: 100%;
   overflow-x: hidden;
 }
 
-body::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-  display: none;
-}
 
 body {
   background: #eceef1;
